--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
-<script type="text/javascript" src="./runtime.js"></script>
-<script type="text/javascript" src="./polyfills.js"></script>
-<script type="text/javascript" src="./styles.js"></script>
-<script type="text/javascript" src="./vendor.js"></script>
-<script type="text/javascript" src="./main.js"></script></body>
+    <app-root></app-root>
+  <script type="text/javascript" src="/angularGithub/runtime.js"></script>
+  <script type="text/javascript" src="/angularGithub/polyfills.js"></script>
+  <script type="text/javascript" src="/angularGithub/styles.js"></script>
+  <script type="text/javascript" src="/angularGithub/vendor.js"></script>
+  <script type="text/javascript" src="/angularGithub/main.js"></script>
+</body>
 </html>
